contrast issue

--- a/assets/css/external-blocks.scss
+++ b/assets/css/external-blocks.scss
@@ -149,7 +149,7 @@ body {
     }
 
     .add-list-reset li a {
-        color: #1763cf !important;
+        color: #1662ce !important;
         font-size: 16px;
     }
 
